--- a/Python Crash Course-1.ipynb
+++ b/Python Crash Course-1.ipynb
@@ -808,11 +808,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lst = [22,4,5,2,]"
+    "lst = [22,4,5,2,2,1,1,4,4,4,23,2,2889]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2889"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst[-1]"
    ]
   }
  ],
